--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ members = [
     "nym-security-audit",
     "nym-privacy-validation",
     "nym-performance",
+    "nym-compute",
 ]
 
 [workspace.dependencies]
@@ -71,6 +72,7 @@ nym-node = { path = "nym-node" }
 nym-security-audit = { path = "nym-security-audit" }
 nym-privacy-validation = { path = "nym-privacy-validation" }
 nym-performance = { path = "nym-performance" }
+nym-compute = { path = "nym-compute" }
 
 tokio = { workspace = true }
 tracing = { workspace = true }
