--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,8 @@ members = [
     "nym-privacy-validation",
     "nym-performance",
     "nym-compute",
+    "nym-economics",
+    "nym-transparency",
 ]
 
 [workspace.dependencies]
@@ -30,6 +32,7 @@ rand_core = "0.6"
 zeroize = { version = "1.7", features = ["derive"] }
 subtle = "2.5"
 secrecy = { version = "0.8", features = ["serde"] }
+hex = "0.4"
 
 # Serialization
 serde = { version = "1.0", features = ["derive"] }
@@ -73,6 +76,8 @@ nym-security-audit = { path = "nym-security-audit" }
 nym-privacy-validation = { path = "nym-privacy-validation" }
 nym-performance = { path = "nym-performance" }
 nym-compute = { path = "nym-compute" }
+nym-economics = { path = "nym-economics" }
+nym-transparency = { path = "nym-transparency" }
 
 tokio = { workspace = true }
 tracing = { workspace = true }
