--- a/nym-node/Cargo.toml
+++ b/nym-node/Cargo.toml
@@ -2,6 +2,51 @@
 name = "nym-node"
 version = "0.1.0"
 edition = "2021"
-description = "Placeholder for nym-node"
+description = "Nym full node implementation"
+license = "MIT OR Apache-2.0"
 
 [dependencies]
+# Core Nym components
+nym-core = { path = "../nym-core" }
+nym-crypto = { path = "../nym-crypto" }
+nym-consensus = { path = "../nym-consensus" }
+nym-network = { path = "../nym-network" }
+nym-storage = { path = "../nym-storage" }
+nym-compute = { path = "../nym-compute" }
+nym-economics = { path = "../nym-economics" }
+nym-transparency = { path = "../nym-transparency" }
+
+# QuID integration
+quid-core = { path = "../../quid/quid-core" }
+
+# Async runtime
+tokio = { version = "1.0", features = ["full"] }
+tokio-util = { version = "0.7", features = ["codec"] }
+
+# Serialization
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+bincode = "1.3"
+toml = "0.8"
+
+# Logging
+tracing = "0.1"
+tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+
+# Error handling
+thiserror = "1.0"
+anyhow = "1.0"
+
+# CLI
+clap = { version = "4.0", features = ["derive"] }
+
+# Utilities
+futures = "0.3"
+chrono = { version = "0.4", features = ["serde"] }
+dirs = "5.0"
+sha3 = "0.10"
+hex = "0.4"
+
+[dev-dependencies]
+tempfile = "3.0"
+proptest = "1.4"
