--- a/nym-network/Cargo.toml
+++ b/nym-network/Cargo.toml
@@ -25,6 +25,7 @@ anyhow = "1.0"
 hex = "0.4"
 rand = "0.8"
 tracing = "0.1"
+chrono = { version = "0.4", features = ["serde"] }
 
 # Networking protocols
 libp2p = { version = "0.53", default-features = false, features = [
